# OpenglCameraFilters

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cci/glcamerafilters/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opengl_camera_renderer.cpp
app/src/main/java/com/cci/glcamerafilters/: MainActivity.kt  OpenGLRenderer.kt  SingleThreadHandlerExecutor.kt  SurfaceViewRenderSurface.java  Surfaces.java  TextureViewRenderSurface.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cci/glcamerafilters/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
